syntax = "proto3";

option csharp_namespace = "Orbit.Shared.Proto";

package Orbit.Shared;

import "orbit/shared/addressable.proto";

service AddressableManagement {
    rpc RenewLease (RenewAddressableLeaseRequestProto) returns (RenewAddressableLeaseResponseProto);
    rpc AbandonLease (AbandonAddressableLeaseRequestProto) returns (AbandonAddressableLeaseResponseProto);
}

message RenewAddressableLeaseRequestProto {
    AddressableReferenceProto reference = 1;
}

message RenewAddressableLeaseResponseProto {
    Status status = 1;
    AddressableLeaseProto lease = 2;
    string error_description = 3;

    enum Status {
        OK = 0;
        ERROR = 1;
    }
}

message AbandonAddressableLeaseRequestProto {
    AddressableReferenceProto reference = 1;
}

message AbandonAddressableLeaseResponseProto {
    bool abandoned = 1;
}